results/SpecGenBench/4-shot/log-FindClosestNum-2023_11_05_01_16_09.txt
class FindClosestNum {
    //@ requires nums != null && nums.length > 0;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; ans <= nums[i]);
    //@ ensures (\exists int i; 0 <= i && i < nums.length; ans == nums[i]);
    public int findClosestNumber(int[] nums) {
        int ans = Integer.MAX_VALUE;

        //@ maintaining (\forall int i; 0 <= i && i < nums.length; ans <= nums[i]);
        //@ maintaining (\exists int i; 0 <= i && i < nums.length; ans == nums[i]);
        //@ decreases nums.length - i;
        for(int i = 0; i < nums.length; i++) {
            int num = nums[i];
            int absNum = (num<0?-num:num);
            int absAns = (ans<0?-ans:ans);
            if(absNum < absAns || (absNum == absAns && num > ans)) {
                ans = num;
            }
        }

        return ans;
    }
}
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:3: error: cannot find symbol
    //@ ensures (\forall int i; 0 <= i && i < nums.length; ans <= nums[i]);
                                                           ^
  symbol:   variable ans
  location: class FindClosestNum
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:4: error: cannot find symbol
    //@ ensures (\exists int i; 0 <= i && i < nums.length; ans == nums[i]);
                                                           ^
  symbol:   variable ans
  location: class FindClosestNum
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:8: error: variable i is already defined in method findClosestNumber(int[])
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; ans <= nums[i]);
                                     ^
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:9: error: variable i is already defined in method findClosestNumber(int[])
        //@ maintaining (\exists int i; 0 <= i && i < nums.length; ans == nums[i]);
                                     ^
4 errors

